k8s/manifests-9cf2ff/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-9cf2ff
  namespace: journee
  labels:
    app: journee-9cf2ff
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-9cf2ff
  template:
    metadata:
      labels:
        app: journee-9cf2ff
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-9cf2ff
          image: gcr.io/my-docker-471807/journee:v7.0.0
          ports:
            - containerPort: 3000
