k8s/manifests-9cf2ff/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-9cf2ff
  namespace: journee
spec:
  selector:
    app: journee-9cf2ff
  ports:
    - port: 80
      targetPort: 3000
